fixed earthnow dark mode cards

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -7,6 +7,12 @@
 background-color: #16161a;
 color: white;
   }
+
+  .dark-mode .pollutionConsequence {
+    background-color: #333; /* Or any other dark color */
+    color: #080000; /* Ensures text is white */
+  }
+  
    .earth {
     background-color: #A4E3B1;
    }
